--- a/first_publisher_subscriber/CMakeLists.txt
+++ b/first_publisher_subscriber/CMakeLists.txt
@@ -7,22 +7,23 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
-
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(custom_msg_srv REQUIRED)
+
+add_executable(service src/service.cpp)
+ament_target_dependencies(service rclcpp custom_msg_srv)
 
 add_executable(talker src/publisher_member_function.cpp)
-ament_target_dependencies(talker rclcpp std_msgs)
+ament_target_dependencies(talker rclcpp std_msgs custom_msg_srv)
 
 add_executable(listener src/subscriber_member_function.cpp)
-ament_target_dependencies(listener rclcpp std_msgs)
+ament_target_dependencies(listener rclcpp std_msgs custom_msg_srv)
 
 install(TARGETS
   talker
   listener
+  service
   DESTINATION lib/${PROJECT_NAME})
 
 if(BUILD_TESTING)
@@ -37,4 +38,5 @@ if(BUILD_TESTING)
   ament_lint_auto_find_test_dependencies()
 endif()
 
+ament_export_dependencies(rosidl_default_runtime)
 ament_package()
