--- a/custom_msg_srv/package.xml
+++ b/custom_msg_srv/package.xml
@@ -3,14 +3,21 @@
 <package format="3">
   <name>custom_msg_srv</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>This package contains custom msg and srv for first_publisher_subscriber</description>
   <maintainer email="aaqib.barodawala@gmail.com">dawn</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+
+  <build_depend>builtin_interfaces</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+  <exec_depend>builtin_interfaces</exec_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
     <build_type>ament_cmake</build_type>
