--- a/first_publisher_subscriber/CMakeLists.txt
+++ b/first_publisher_subscriber/CMakeLists.txt
@@ -10,12 +10,15 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(custom_msg_srv REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
 
 add_executable(service src/service.cpp)
 ament_target_dependencies(service rclcpp custom_msg_srv)
 
 add_executable(talker src/publisher_member_function.cpp)
-ament_target_dependencies(talker rclcpp std_msgs custom_msg_srv)
+ament_target_dependencies(talker rclcpp std_msgs custom_msg_srv geometry_msgs tf2 tf2_ros) 
 
 add_executable(listener src/subscriber_member_function.cpp)
 ament_target_dependencies(listener rclcpp std_msgs custom_msg_srv)
